# work-agent

./: .context-summary.md  .dockerignore  .env.example  .fallowrc.json  .gitignore  .npmrc  .work-agent  AGENTS.md  ANALYTICS_CONTEXT.md  API.md  API_SUMMARY.md  APP_CLEANUP_PROGRESS.md  CLEANUP_FINAL.md  CODEBASE_AUDIT.html  COMPLETION_REPORT.md  Dockerfile  ENDPOINTS_IN_USE.md  FINAL_FIXES.md  GENERATOR_PATTERN_EXAMPLE.md  KEYBOARD_SHORTCUTS.md  MERGE_INSTRUCTIONS.md  PLAN-tauri-native-features.md  PLUGIN_STRUCTURE.md  PROMPT.txt  REACT_QUERY_MIGRATION_STATUS.md  README.md  REMOVED_APP_FUNCTIONS.md  SDK_QUERY_HOOKS.md  SECURITY.md  SLASH_COMMANDS.md  STATE_MANAGEMENT_PLAN.md  VOLTAGENT_IMPLEMENTATION.md  biome.json  buildspec-windows.yml  check-status.sh  debug-dev3.mjs  docker-compose.yml  esbuild.config.mjs  fix-updates.py  launch-stallion.sh  (+15 more)
.ai-guidance/: README.md  work-agent.adapter.json
.changeset/: align-shared-version.md  config.json
.github/: dependabot.yml  pull_request_template.md
.kiro-agents/: README.md
.plans/: 01-connected-agents-overhaul.md  02-connected-agents-hardening-and-verification.md  03-connections-runtime-ux.md  04-ux-frontend-polish.md  README.md  SESSION-HANDOFF-PROMPT.md
.veritas/: GOVERNANCE.md  README.md  repo.adapter.json
aidlc-docs/: audit.md  (+1 more)
src-desktop/: Cargo.toml  tauri.conf.json
src-desktop/capabilities/: default.json  mobile.json
src-desktop/icons/: README.md  icon.icns
src-desktop/icons/android/values/: ic_launcher_background.xml
src-desktop/plugin-mdns/: Cargo.toml  build.rs
src-desktop/plugin-mdns/android/: build.gradle.kts
src-desktop/plugin-mdns/android/src/main/: AndroidManifest.xml
src-desktop/plugin-mdns/android/src/main/kotlin/xyz/briananderson/stallion/mdns/: MdnsPlugin.kt
src-desktop/plugin-mdns/src/: lib.rs
src-desktop/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+1838 files in other folders)
