[package]
name = "tauri-plugin-stallion-mdns"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for mDNS discovery via Android NsdManager"
links = "tauri-plugin-stallion-mdns"

[lib]
name = "tauri_plugin_stallion_mdns"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
